Projeto ajustado e funcionando

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,13 +5,13 @@ server.port=8080
 spring.application.name=sustenergy
 
 # Configuração do banco de dados SQL Server no Azure
-spring.datasource.url=jdbc:sqlserver://<nome-do-servidor>.database.windows.net:1433;database=<nome-do-banco>
-spring.datasource.username=<nome-de-usuario>
-spring.datasource.password=<senha>
+spring.datasource.url=jdbc:sqlserver://serversustenergy.database.windows.net:1433;database=banco-SustEnergy
+spring.datasource.username=userSustEnergy
+spring.datasource.password=@Devopsgs2024
 spring.datasource.driver-class-name=com.microsoft.sqlserver.jdbc.SQLServerDriver
 
 # Habilitando o Hibernate (JPA) para gerenciar o banco de dados
-spring.jpa.hibernate.ddl-auto=update # ou validate, dependendo do seu caso
+spring.jpa.hibernate.ddl-auto=update
 spring.jpa.database-platform=org.hibernate.dialect.SQLServer2012Dialect
 
 # Habilita o log de consultas SQL
