--- a/pom.xml
+++ b/pom.xml
@@ -27,7 +27,7 @@
 		<url/>
 	</scm>
 	<properties>
-		<maven-surefire-plugin.version>3.2.5</maven-surefire-plugin.version>
+		<maven-surefire-plugin.version>3.0.0-M7</maven-surefire-plugin.version>
 		<java.version>17</java.version>
 	</properties>
 	<dependencies>
@@ -51,10 +51,11 @@
 			<optional>true</optional>
 		</dependency>
 		<dependency>
-			<groupId>com.mysql</groupId>
-			<artifactId>mysql-connector-j</artifactId>
-			<scope>runtime</scope>
+    		<groupId>com.microsoft.sqlserver</groupId>
+    		<artifactId>mssql-jdbc</artifactId>
+    		<version>9.4.1.jre8</version> <!-- ou a versão que você deseja usar -->
 		</dependency>
+
 		<dependency>
 			<groupId>org.projectlombok</groupId>
 			<artifactId>lombok</artifactId>
@@ -72,10 +73,11 @@
         <plugin>
             <groupId>org.apache.maven.plugins</groupId>
             <artifactId>maven-surefire-plugin</artifactId>
-            <version>2.22.1</version>
+            <version>3.0.0-M7</version>
             <configuration>
-                <!-- configurações adicionais, se necessário -->
-            </configuration>
+  				<parallel>none</parallel>
+			</configuration>
+
         </plugin>
 
         <!-- Segundo plugin: spring-boot-maven-plugin -->
