--- a/pom.xml
+++ b/pom.xml
@@ -31,6 +31,21 @@
 		<java.version>17</java.version>
 	</properties>
 	<dependencies>
+		
+ 		<dependency>
+        	<groupId>org.junit.jupiter</groupId>
+        	<artifactId>junit-jupiter</artifactId>
+        	<version>5.7.0</version> 
+        	<scope>test</scope>
+    	</dependency>
+
+    	<dependency>
+	        <groupId>org.junit.platform</groupId>
+        	<artifactId>junit-platform-surefire-provider</artifactId>
+        	<version>1.3.2</version> 
+        	<scope>test</scope>
+    	</dependency>
+
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-data-jpa</artifactId>
@@ -78,7 +93,7 @@
         <plugin>
             <groupId>org.apache.maven.plugins</groupId>
             <artifactId>maven-surefire-plugin</artifactId>
-            <version>3.0.0-M7</version>
+            <version>2.22.2</version>
             <configuration>
   				<parallel>none</parallel>
 			</configuration>
